Edited registration part

--- a/index.html
+++ b/index.html
@@ -540,25 +540,29 @@
                     </div></div>
                     <!--Grid row-->
             </section>
-                    <!--Section: gaming-->
-                    <section id="registration" style="padding-top: 1cm; padding-bottom: 2cm;">
-                        <div class="container" >
-
-                            <!-- Heading -->
-                            <h1 class="mb-5 font-weight-bold text-center white-text mb-2">Registration</h1>
-                            <br>
-                            <div class="row justify-content-md-center" style="padding-top: 5cm; padding-bottom: 5cm;">
-                                <div class="col-md-6">
-                                    <h1 style="text-align: center; color: white;">COMING SOON</h1>
-                                </div>
-                                
-                            </div>
-                        </div>
+                <!--Section: gaming-->
+                <section id="registration" style="padding-top: 1cm; padding-bottom: 2cm;">
+                    <div class="container" >
+                        <h1 class="mb-5 font-weight-bold text-center white-text mb-2">Registration</h1>
                         <br>
-
-
-                    </div>
+                        <div class="row justify-content-md-center" style="padding-top: 5cm; padding-bottom: 5cm;">
+                            <div class="col-md-6">
+                                <h1 style="text-align: center; color: white;">COMING SOON</h1>
+                            </div>
+                            </div>
+                    </div>    
                 </section>
+                <!-- <section id="registration" style="padding-top: 1cm; padding-bottom: 2cm;">
+                    <div class="container" >
+                        <h1 class="mb-5 font-weight-bold text-center white-text mb-2">Registration</h1>
+                        <br>
+                        <div class="row justify-content-md-center" style="padding-top: 5cm; padding-bottom: 5cm;">
+                            <div class="col-md-6">
+                                <h1 style="text-align: center; color: white;">COMING SOON</h1>
+                            </div>
+                            </div>
+                    </div>    
+                </section> -->
                 <section id="contact" style="padding-top: 1cm; padding-bottom: 2cm;">
                         <div class="container" >
 
