competitons content written as much available

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                     <div class="card-body">
                                         <p class="white-text my-4">
                                             Battle with the top coders IIT Bhilai has to offer in CodeCrusade – A test of speed, skill and knowledge. Visit our campus to participate and claim your prize and glory.<br>
-                                            <b>Date:</b> 11/11/17 and 12/11/17<br>
+                                            <b>Date:</b> 11 Nov 2017 and 12 Nov 2017<br>
                                             <b>Time:</b> 10:30am to 11:30am Level 1 and12/11/17 2:30pm to 5:30pm Level 2<br>
                                             <b>Team: </b>This is an individual event.<br>
                                             <b>Prize worth:  ₹3500</b><br>
@@ -267,7 +267,7 @@
                                 <div class="card-body">
                                 <p class="white-text my-4">
                                 <b> Theme:</b> Basic Sciences & Brain squeezing Buzzer Competition.<br>
-                                <b> Date:</b> 11th November 2017<br>
+                                <b> Date:</b> 11th Nov 2017<br>
                                 <b> Time:</b> 10am to 11:30am<br>
                                 <b> Team:</b> 3 students per team<br>
                                 <b> Prize worth:</b> ₹2000
@@ -285,7 +285,7 @@
                                 <div class="card-body">
                                 <p class="white-text my-4">
                                 <b> Theme:</b> Gesture controlled Soccer match <br>
-                                <b> Date: </b> 11/11/17<br>
+                                <b> Date: </b> 11 Nov 2017<br>
                                 <b>Time:</b>4:30pm to 6:30pm<br>
                                 <b>Prize: </b>₹2000</p>
                                 </div>
@@ -300,7 +300,10 @@
                                 <div id="collapse4" class="collapse" role="tabpanel" aria-labelledby="heading4">
                                 <div class="card-body">
                                  <p class="white-text my-4">
-                                <b> Theme:</b> A new virtual interactive ball based game<br><b>Prize worth: ₹2000</b></p>
+                                <b> Theme:</b> A new virtual interactive ball based game<br>
+                                <b> Date:</b>12 Nov 2017<br>
+                                <b> Time: </b>9:30am to 11:30am<br>
+                                <b>Prize worth: ₹2000</b></p>
                                 </div>
                                 </div>
 
