--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                            <b>Date: </b>12th Nov 2017<br>
                            <b>Time: </b>11am to 1:30pm(workshop), 3pm to 5pm(competition)<br>
                            <b>Team: </b>5 students per team<br>
+                            <b>At least one laptop is mandatory per team</b><br>
                            <b>Participation Limit: </b>130 students<br>
                            <b>Prize worth: </b>₹2000 to the winning team</p>
 
