--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <img class="mx-auto d-block" src="static/img/logo1.png" width="350px" height="350px">
                         <!-- Heading -->
                         <h2 class="display-3  white-text mb-2" style="padding-top: 1cm;">Tech Maitry</h2>
-
+                        <h4 class="white-text" style="padding-top: 0cm;">11th and 12th November</h4>
                         <!-- Divider -->
                         <hr class="hr-light">
 
@@ -774,7 +774,7 @@
                         <div class="footer-copyright">
                             <div class="container-fluid">
                                 <a href="https://www.iitbhilai.ac.in"> © SciTech IIT Bhilai</a>
-                                <p style="float: right;">Pradeep Kumar</p>
+                                <!-- <p style="float: right;">Pradeep Kumar</p> -->
 
                             </div>
                         </div>
