--- a/index.html
+++ b/index.html
@@ -231,9 +231,28 @@
                                 </div>
                                 <!-- Card body -->
                                 <div id="collapse1" class="collapse" role="tabpanel" aria-labelledby="heading1">
-                                <div class="card-body">
-                                       <p class="white-text my-4">Battle with the top coders IIT Bhilai has to offer in CodeCrusade – A test of speed, skill and knowledge. Visit our campus to participate and claim your prize and glory.<br>This is an individual event.<br>Date and Time: 11/11/17 10:30am to 11:30am Level 1 and <b>Prize worth:</b>  ₹3500</p>
-                               </div>
+                                    <div class="card-body">
+                                        <p class="white-text my-4">
+                                            Battle with the top coders IIT Bhilai has to offer in CodeCrusade – A test of speed, skill and knowledge. Visit our campus to participate and claim your prize and glory.<br>This is an individual event.<br>
+                                            <b>Date:</b> 11/11/17 and 12/11/17<br>
+                                            <b>Time:</b> 10:30am to 11:30am Level 1 and12/11/17 2:30pm to 5:30pm Level 2<br>
+                                            <b>Prize worth:</b>  ₹3500<br>
+                                           <b>Details:</b>There are two rounds<br>
+                                           <ul class="white-text my-4">
+                                                <li>
+                                                    1st round<br>
+                                                    1 hour Quiz.  20 top scorers will qualify for round 2.<br>
+                                                    <b>Note: There are no language-specific questions</b>
+                                                </li>
+                                                <li>
+                                                    2st round<br>
+                                                    2.5 hour on-spotcoding competition. Accepted languages are Python, Java, C, C++.<br>
+                                                    <b>Note: Basic knowledge on file I/O is necessary.</b>
+                                                </li>
+                                           </ul>
+                                           
+                                       </p>
+                                    </div>
                                 </div>
 
                                  <!--Excerpt-->
