--- a/index.html
+++ b/index.html
@@ -235,20 +235,31 @@
                                     <div class="card-body">
                                         <p class="white-text my-4">
                                             Battle with the top coders IIT Bhilai has to offer in CodeCrusade – A test of speed, skill and knowledge. Visit our campus to participate and claim your prize and glory.<br>
-                                            <b>Date:</b> 11 Nov 2017 and 12 Nov 2017<br>
-                                            <b>Time:</b> 10:30am to 11:30am Level 1 and12/11/17 2:30pm to 5:30pm Level 2<br>
-                                            <b>Team: </b>This is an individual event.<br>
-                                            <b>Prize worth:  ₹3500</b><br>
-                                            <b>Details:</b>There are two rounds<br>
+                                            <b>Date:</b> 12 Nov 2017<br>
+                                            <b>Time:</b>
                                             <ul class="white-text my-4">
                                                 <li>
-                                                    1st round<br>
-                                                    1 hour Quiz.  20 top scorers will qualify for round 2.<br>
+                                                    Round 1: 10:30 am - 11:30 am<br>
+                                                </li>
+                                                <li>
+                                                    Round 2: 2:30 pm - 5:30 pm<br>
+                                                </li>
+                                            </ul>
+                                            <p class="white-text my-4">
+                                                <b>Team: </b>This is an individual event.<br>
+                                                <b>Prize worth:  ₹3500</b><br>
+                                                <b>Details:</b>There are two rounds<br>
+                                            </p>
+                                            <ul class="white-text my-4">
+                                                <li>
+                                                    Round 1<br>
+                                                    1 hour Quiz on programming thinking.<br>
+                                                    20 top scorers will qualify for round 2.<br>
                                                     <b>Note: There are no language-specific questions</b>
                                                 </li>
                                                 <li>
                                                     2st round<br>
-                                                    2.5 hour on-spotcoding competition. Accepted languages are Python, Java, C, C++.<br>
+                                                    2.5 hour on-spot coding competition. Accepted languages are Python, Java, C, C++.<br>
                                                     <b>Note: Basic knowledge on file I/O is necessary.</b>
                                                 </li>
                                             </ul>
