Edited Registration section

--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
                            <p class="white-text my-4">
                            <b>Theme: </b>Robotics<br>
                            <b>Date: </b>12th Nov 2017<br>
-                           <b>Time: </b>11am to 1:30pm(workshop), 3pm to 5pm(competition)<br>
+                           <b>Time: </b>11:30am to 1:30pm(workshop), 3pm to 5pm(competition)<br>
                            <b>Team: </b>5 students per team<br>
                             <b>At least one laptop is mandatory per team</b><br>
                            <b>Participation Limit: </b>130 students<br>
                            <b>Prize worth: </b>₹2000 to the winning team</p>
 
                    </div>
-                    </div>
+                   </div>
      
 
 
@@ -193,7 +193,7 @@
                         <div id="collapse12" class="collapse " role="tabpanel" aria-labelledby="heading12">
                             <div class="card-body">
                                 <p class="white-text my-4">
-                                   <b>Theme: </b>Internet of Things<br>
+                                   <b>Theme: </b>Control an Arduino via internet.<br>
                                    <b>Date: </b>11th Nov 2017<br>
                                    <b>Time: </b>11:30am to 1:30pm(workshop)<br>
                                    <b>Team: </b>5 students per team<br>
@@ -580,12 +580,23 @@
             </section>
                 <!--Section: gaming-->
                 <section id="registration" style="padding-top: 1cm; padding-bottom: 2cm;">
-                    <div class="container" >
-                        <h1 class="mb-5 font-weight-bold text-center white-text mb-2">Registration</h1>
+                    <div class="container">
+                        <h1 class="mb-5 font-weight-bold text-center white-text mb-2" style="padding-top: 3cm;">Registration Form</h1>
                         <br>
-                        <div class="row justify-content-md-center" style="padding-top: 5cm; padding-bottom: 5cm;">
-                            <div class="col-md-6">
-                                <h1 style="text-align: center; color: white;">COMING SOON</h1>
+                        <div class="row justify-content-md-center">
+                            <!-- Schdule link, form, notifications tab -->
+                            <div class="col-md-6" style="align-items: center;padding-top: 0cm;padding-bottom: 3cm;">
+                               <!--  <h1 style="text-align: center; color: white; padding-bottom: 1cm;">Registration form
+                                </h1> -->
+                                <a href="https://goo.gl/forms/shmIQOrhzF0aoueF3">
+                                    <h1 style="text-align:center;">
+                                        <button type="button" class="btn btn-elegant">Registration form
+                                        </button>
+                                    </h1>
+                                </a>
+                            </div>
+                            <div >
+                                
                             </div>
                         </div>
                     </div>    
