--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                             <div class="col-md-6" style="align-items: center;padding-top: 0cm;padding-bottom: 3cm;">
                                <!--  <h1 style="text-align: center; color: white; padding-bottom: 1cm;">Registration form
                                 </h1> -->
-                                <a href="https://goo.gl/forms/shmIQOrhzF0aoueF3">
+                                <a href="https://goo.gl/forms/shmIQOrhzF0aoueF3"target="_blank">
                                     <h1 style="text-align:center;">
                                         <button type="button" class="btn btn-elegant">Registration form
                                         </button>
