--- a/index.html
+++ b/index.html
@@ -581,13 +581,12 @@
                 <!--Section: gaming-->
                 <section id="registration" style="padding-top: 1cm; padding-bottom: 2cm;">
                     <div class="container">
-                        <h1 class="mb-5 font-weight-bold text-center white-text mb-2" style="padding-top: 3cm;">Registration Form</h1>
+                        <h1 class="mb-5 font-weight-bold text-center white-text mb-2" style="padding-top: 1cm;">Registrations</h1>
                         <br>
-                        <div class="row justify-content-md-center">
+                        <div class="row justify-content-md-center" style="padding-bottom: 3cm;">
                             <!-- Schdule link, form, notifications tab -->
-                            <div class="col-md-6" style="align-items: center;padding-top: 0cm;padding-bottom: 3cm;">
-                               <!--  <h1 style="text-align: center; color: white; padding-bottom: 1cm;">Registration form
-                                </h1> -->
+                            <div class="col-md-6" style="align-items: center; padding-top: 1cm;">
+                               <!-- <h3 class="font-weight-bold text-center white-text mb-2">Notifications</h3> -->
                                 <a href="https://goo.gl/forms/shmIQOrhzF0aoueF3"target="_blank">
                                     <h1 style="text-align:center;">
                                         <button type="button" class="btn btn-elegant">Registration form
@@ -595,8 +594,9 @@
                                     </h1>
                                 </a>
                             </div>
-                            <div >
-                                
+                            <div class="col-md-6">
+                                <h3 class="font-weight-bold text-center white-text mb-2">Notifications</h3>
+                                <div class="col-md-12" style="background-color: #0000003d; min-height: 5cm;"></div>
                             </div>
                         </div>
                     </div>    
