--- a/index.html
+++ b/index.html
@@ -596,7 +596,11 @@
                             </div>
                             <div class="col-md-6">
                                 <h3 class="font-weight-bold text-center white-text mb-2">Notifications</h3>
-                                <div class="col-md-12" style="background-color: #0000003d; min-height: 5cm;"></div>
+                                <div class="col-md-12" style="background-color: #0000003d; min-height: 5cm;">
+                                    <!-- <ul>
+                                        <li></li>
+                                    </ul> -->
+                                </div>
                             </div>
                         </div>
                     </div>    
