--- a/index.html
+++ b/index.html
@@ -596,10 +596,12 @@
                             </div>
                             <div class="col-md-6">
                                 <h3 class="font-weight-bold text-center white-text mb-2">Notifications</h3>
-                                <div class="col-md-12" style="background-color: #0000003d; min-height: 5cm;">
-                                    <!-- <ul>
-                                        <li></li>
-                                    </ul> -->
+                                <div class="col-md-12 white-text mb-2" style="background-color: #0000003d; min-height: 5cm;">
+                                    <p style="padding-top: 0.5cm;"><b>Keep checking this section for updates</b></p>
+                                    <ul>
+                                        <li><b>Registration Started</b></li>
+                                        <!-- <li><b>Special Lunch will be arranged for all participants</b></li> -->
+                                    </ul>
                                 </div>
                             </div>
                         </div>
