--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Tech Maitry</title>
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-    <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
     <link href="static/css/mdb.min.css" rel="stylesheet">
-    <!-- Your custom styles (optional) -->
     <link href="static/css/style.css" rel="stylesheet">
+    <link rel="icon" href="static/img/logo1_fav.ico" type="image/gif" sizes="16x16">
 </head>
 
 <body>
@@ -600,7 +597,7 @@
                                     <p style="padding-top: 0.5cm;"><b>Keep checking this section for updates</b></p>
                                     <ul>
                                         <li><b>Registration Started</b></li>
-                                        <!-- <li><b>Special Lunch will be arranged for all participants</b></li> -->
+                                        <li><b>Special Lunch will be arranged for all participants <a href="static/Special_dinner.pdf" style="color: black;">Read More</a></b></li>
                                     </ul>
                                 </div>
                             </div>
