--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="static/css/mdb.min.css" rel="stylesheet">
     <link href="static/css/style.css" rel="stylesheet">
     <link rel="icon" href="static/img/logo1_fav.ico" type="image/gif" sizes="16x16">
+  <meta property="og:image" content="static/logo1.png" />
 </head>
 
 <body>
