--- a/index.html
+++ b/index.html
@@ -583,14 +583,29 @@
                         <br>
                         <div class="row justify-content-md-center" style="padding-bottom: 3cm;">
                             <!-- Schdule link, form, notifications tab -->
-                            <div class="col-md-6" style="align-items: center; padding-top: 1cm;">
-                               <!-- <h3 class="font-weight-bold text-center white-text mb-2">Notifications</h3> -->
-                                <a href="https://goo.gl/forms/shmIQOrhzF0aoueF3"target="_blank">
-                                    <h1 style="text-align:center;">
-                                        <button type="button" class="btn btn-elegant">Registration form
-                                        </button>
-                                    </h1>
-                                </a>
+                            <div class="col-md-6" style="align-items: center;">
+                                <div style="max-width: 50%;">
+                                    <a href="static/Registration_information.pdf"target="_blank">
+                                        <h1 style="text-align:center;">
+                                            <button type="button" class="btn btn-warning" style="width: 100%;">Registration Information</button>
+                                        </h1>
+                                    </a>
+                                    <a href="https://goo.gl/forms/shmIQOrhzF0aoueF3"target="_blank">
+                                        <h1 style="text-align:center;">
+                                            <button type="button" class="btn btn-elegant" style="width: 100%;">Registration Form</button>
+                                        </h1>
+                                    </a>
+                                    <a href="static/Lunch_info.pdf"target="_blank">
+                                        <h1 style="text-align:center;">
+                                            <button type="button" class="btn btn-warning" style="width: 100%;">Lunch Information</button>
+                                        </h1>
+                                    </a>
+                                    <a href="https://goo.gl/forms/DucqfZUvqixcdTSo1"target="_blank">
+                                        <h1 style="text-align:center;">
+                                            <button type="button" class="btn btn-elegant" style="width: 100%;">Form for pre-payment of meals</button>
+                                        </h1>
+                                    </a>
+                                </div>
                             </div>
                             <div class="col-md-6">
                                 <h3 class="font-weight-bold text-center white-text mb-2">Notifications</h3>
@@ -598,7 +613,7 @@
                                     <p style="padding-top: 0.5cm;"><b>Keep checking this section for updates</b></p>
                                     <ul>
                                         <li><b>Registration Started</b></li>
-                                        <li><b>Special Lunch will be arranged for participants <a href="static/Special_dinner.pdf" style="color: black;">Read More</a></b></li>
+                                        <!-- <li><b>Special Lunch will be arranged for participants <a href="static/Special_dinner.pdf" style="color: black;">Read More</a></b></li> -->
                                     </ul>
                                 </div>
                             </div>
