--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                         <div class="row justify-content-md-center" style="padding-bottom: 3cm;">
                             <!-- Schdule link, form, notifications tab -->
                             <div class="col-md-6" style="align-items: center;">
-                                <div style="max-width: 50%;">
+                                <div style="max-width: 50%; margin: 0 auto;">
                                     <a href="static/Registration_information.pdf"target="_blank">
                                         <h1 style="text-align:center;">
                                             <button type="button" class="btn btn-warning" style="width: 100%;">Registration Information</button>
