Mini Militia read more

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                                 <!-- Card body -->
                                 <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="card-body">
-                                   <p class="white-text mb-2">Fire in the Hole, Decimate your opponents with all you got!!<br><b> Prize worth: </b> ₹2000 </p>
+                                   <p class="white-text mb-2">Fire in the Hole, Decimate your opponents with all you got!!<br><b> Prize worth: </b> ₹2000  <b><a href="static/minimilitia.pdf">Read More</a></b></p>
                                 </div>
                                 </div>
                                 </div>
