--- a/index.html
+++ b/index.html
@@ -459,8 +459,7 @@
                                 <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="card-body">
                                      <p class="white-text mb-2">All gamers get ready to show your gaming skills by participating in the counter strike global offensive competition <br>
-                                    <b> Prize : </b> The winning team will be awarded ₹4000 cash prize. 
-                                </p>
+                                    <b> Prize : </b> The winning team will be awarded ₹4000 cash prize<br><b><a href="static/CS_GO.pdf">Read More</a></b></p>
                                </div>
                                 </div>
 
