--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
 
                         <!-- Description -->
                         <h4 class="white-text my-4">Welcome to Tech Maitry, a platform to bond over technological innovations. Unleash the geek within you by stimulating your cortex with a vortex of events at Tech Maitry.</h4>
-
+                        <a href="static/all_posters_poster_techmaitry.pdf"target="_blank">
+                            <h1 style="text-align:center;">
+                                <button type="button" class="btn btn-info btn-lg">Download all posters</button>
+                            </h1>
+                        </a>
                     </div>
 
                 </div>
