--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="row d-flex justify-content-center">
 
                     <div class="col-md-10 text-center" id="techmaitry_main">
-                        <img class="mx-auto d-block" src="static/img/logo1.png" width="350px" height="350px">
+                        <img class="mx-auto d-block" src="static/img/logo1.png" id="mainlogo">
                         <!-- Heading -->
                         <h2 class="display-3  white-text mb-2" style="padding-top: 1cm;">Tech Maitry</h2>
                         <h4 class="white-text" style="padding-top: 0cm;">11th and 12th November</h4>
