Added tag line for event

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                     <div class="col-md-10 text-center" id="techmaitry_main">
                         <img class="mx-auto d-block" src="static/img/logo1.png" id="mainlogo" style="max-width: 7cm; max-height: 7cm;">
                         <!-- Heading -->
-                        <h2 class="display-3  white-text mb-2" style="padding-top: 1cm;">Tech Maitry</h2>
-                        <h4 class="white-text" style="padding-top: 0cm;">11th and 12th November</h4>
+                        <h2 class="display-3  white-text mb-2" style="padding-top: 1cm;"><b>Tech Maitry</b></h2>
+                        <h2 class="display-5  white-text mb-4" ><b>Come ally with Technology</b></h2>
+                        <h4 class="white-text" >11th and 12th November</h4>
                         <!-- Divider -->
                         <hr class="hr-light">
 
@@ -254,13 +255,13 @@
                                             </p>
                                             <ul class="white-text my-4">
                                                 <li>
-                                                    Round 1<br>
+                                                    Round 1 :<br>
                                                     1 hour Quiz on programming thinking.<br>
                                                     20 top scorers will qualify for round 2.<br>
                                                     <b>Note: There are no language-specific questions</b>
                                                 </li>
                                                 <li>
-                                                    2st round<br>
+                                                    ROund 2 :<br>
                                                     2.5 hour on-spot coding competition. Accepted languages are Python, Java, C, C++.<br>
                                                     <b>Note: Basic knowledge on file I/O is necessary.</b>
                                                 </li>
