Changed registration pdf

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <img class="mx-auto d-block" src="static/img/logo1.png" id="mainlogo" style="max-width: 7cm; max-height: 7cm;">
                         <!-- Heading -->
                         <h2 class="display-3  white-text mb-2" style="padding-top: 1cm;"><b>Tech Maitry</b></h2>
-                        <h2 class="display-5  white-text mb-4" ><b>Come ally with Technology</b></h2>
+                        <h2 class="display-6  white-text mb-2" ><b>...come ally with Technology</b></h2>
                         <h4 class="white-text" >11th and 12th November</h4>
                         <!-- Divider -->
                         <hr class="hr-light">
@@ -589,7 +589,7 @@
                             <!-- Schdule link, form, notifications tab -->
                             <div class="col-md-6" style="align-items: center;">
                                 <div style="max-width: 50%; margin: 0 auto;">
-                                    <a href="static/Registration_information.pdf"target="_blank">
+                                    <a href="static/Registration_information--.pdf"target="_blank">
                                         <h1 style="text-align:center;">
                                             <button type="button" class="btn btn-warning" style="width: 100%;">Registration Information</button>
                                         </h1>
