--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                                 <button type="button" class="btn btn-info btn-lg">Download all posters</button>
                             </h1>
                         </a>
+                        <a href="static/Schedule_event.pdf"target="_blank">
+                            <h1 style="text-align:center;padding-top: 0cm;">
+                                <button type="button" class="btn btn-info btn-lg">Schedule for the Event</button>
+                            </h1>
+                        </a>
                     </div>
 
                 </div>
