--- a/index.html
+++ b/index.html
@@ -79,23 +79,22 @@
                         <img class="mx-auto d-block" src="static/img/logo1.png" id="mainlogo" style="max-width: 7cm; max-height: 7cm;">
                         <!-- Heading -->
                         <h2 class="display-3  white-text mb-2" style="padding-top: 1cm;"><b>Tech Maitry</b></h2>
-                        <h2 class="display-6  white-text mb-2" ><b>...come ally with Technology</b></h2>
+                        <h2 class="display-6  white-text mb-2" >...come ally with Technology</h2>
                         <h4 class="white-text" >11th and 12th November</h4>
                         <!-- Divider -->
                         <hr class="hr-light">
 
                         <!-- Description -->
                         <h4 class="white-text my-4">Welcome to Tech Maitry, a platform to bond over technological innovations. Unleash the geek within you by stimulating your cortex with a vortex of events at Tech Maitry.</h4>
-                        <a href="static/all_posters_poster_techmaitry.pdf"target="_blank">
-                            <h1 style="text-align:center;">
-                                <button type="button" class="btn btn-info btn-lg">Download all posters</button>
-                            </h1>
-                        </a>
-                        <a href="static/Schedule_event.pdf"target="_blank">
-                            <h1 style="text-align:center;padding-top: 0cm;">
-                                <button type="button" class="btn btn-info btn-lg">Schedule for the Event</button>
-                            </h1>
-                        </a>
+                        <p style="text-align:center;padding-top: 0cm;">
+                            <a href="static/all_posters_poster_techmaitry.pdf"target="_blank">
+                                    <button type="button" class="btn btn-info btn-lg">Download all posters</button>                            
+                            </a>
+                            <a href="static/Schedule_event.pdf"target="_blank">
+                                
+                                    <button type="button" class="btn btn-info btn-lg">Schedule for the Event</button>
+                            </a>
+                        </p>
                     </div>
 
                 </div>
