--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="static/css/mdb.min.css" rel="stylesheet">
     <link href="static/css/style.css" rel="stylesheet">
     <link rel="icon" href="static/img/logo1_fav.ico" type="image/gif" sizes="16x16">
-  <meta property="og:image" content="static/logo1.png" />
+  <meta property="og:image" content="https://techmaitry.iitbhilai.ac.in/static/img/logo1.png" />
 </head>
 
 <body>
@@ -598,7 +598,7 @@
                                             <button type="button" class="btn btn-warning" style="width: 100%;">Registration Information</button>
                                         </h1>
                                     </a>
-                                    <a href="https://goo.gl/forms/shmIQOrhzF0aoueF3"target="_blank">
+                                    <a href="https://goo.gl/forms/J85NFJSEBYqVMS2e2 "target="_blank">
                                         <h1 style="text-align:center;">
                                             <button type="button" class="btn btn-elegant" style="width: 100%;">Registration Form</button>
                                         </h1>
