--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="static/css/style.css" rel="stylesheet">
     <link rel="icon" href="static/img/logo1_fav.ico" type="image/gif" sizes="16x16">
   <meta property="og:image" content="https://techmaitry.iitbhilai.ac.in/static/img/logo1.png" />
+  <meta property="og:description" content="A platform to bond over technological innovations. Unleash the geek within you by stimulating your cortex with a vortex of events at Tech Maitry." />
+  
 </head>
 
 <body>
