--- a/index.html
+++ b/index.html
@@ -623,6 +623,8 @@
                                     <p style="padding-top: 0.5cm;"><b>Keep checking this section for updates</b></p>
                                     <ul>
                                         <li><b>Registration Started</b></li>
+                                        <li><b>Limited seats available</b></li>
+                                        
                                         <!-- <li><b>Special Lunch will be arranged for participants <a href="static/Special_dinner.pdf" style="color: black;">Read More</a></b></li> -->
                                     </ul>
                                 </div>
