--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
                     <div class="col-md-10 text-center" id="techmaitry_main">
                         <img class="mx-auto d-block" src="static/img/logo1.png" id="mainlogo" style="max-width: 6cm; max-height: 6cm;">
                         <!-- Heading -->
-                        <h2 class="display-3  white-text mb-2" style="padding-top: 1cm;"><b>Tech Maitry</b></h2>
+                        <h2 class="display-3  white-text mb-2" style="padding-top: 1cm;" id="titlemain"><b>Tech Maitry</b></h2>
                         <h2 class="display-6  white-text mb-2" >...come ally with Technology</h2>
                         <h4 class="white-text" >11th and 12th November</h4>
                         <!-- Divider -->
                         <hr class="hr-light">
 
                         <!-- Description -->
-                        <h4 class="white-text my-4">Welcome to Tech Maitry, a platform to bond over technological innovations. Unleash the geek within you by stimulating your cortex with a vortex of events at Tech Maitry.</h4>
+                        <h4 class="white-text my-4" id="tagline">Welcome to Tech Maitry, a platform to bond over technological innovations. Unleash the geek within you by stimulating your cortex with a vortex of events at Tech Maitry.</h4>
                         <p style="text-align:center;padding-top: 0cm;">
                             <a href="static/all_posters_poster_techmaitry.pdf"target="_blank">
                                     <button type="button" class="btn btn-info btn-lg">Download all posters</button>                            
