--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                         <!-- Description -->
                         <h4 class="white-text my-4" id="tagline">Welcome to Tech Maitry, a platform to bond over technological innovations. Unleash the geek within you by stimulating your cortex with a vortex of events at Tech Maitry.</h4>
-                        <p style="text-align:center;padding-top: 0cm;">
+                        <h4 style="text-align:center;padding-top: 0cm;">
                             <a href="static/all_posters_poster_techmaitry.pdf"target="_blank">
                                     <button type="button" class="btn btn-info btn-lg">Download all posters</button>                            
                             </a>
@@ -96,7 +96,7 @@
                                 
                                     <button type="button" class="btn btn-info btn-lg">Schedule for the Event</button>
                             </a>
-                        </p>
+                        </h4>
                     </div>
 
                 </div>
