--- a/index.html
+++ b/index.html
@@ -469,8 +469,9 @@
                                 <!-- Card body -->
                                 <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="card-body">
-                                     <p class="white-text mb-2">All gamers get ready to show your gaming skills by participating in the counter strike global offensive competition <br>
-                                    <b> Prize : </b> The winning team will be awarded ₹4000 cash prize<br><b><a href="static/CS_GO.pdf">Read More</a></b></p>
+                                    <p class="white-text mb-2">All gamers get ready to show your gaming skills by participating in the counter strike global offensive competition <br>
+                                        <b> Prize : </b> The winning team will be awarded ₹4000 cash prize<br><b><a id = "hoveryellow" href="static/CS_GO.pdf">Read More</a></b>
+                                    </p>
                                </div>
                                 </div>
 
@@ -483,7 +484,10 @@
                                 <!-- Card body -->
                                 <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="card-body">
-                                   <p class="white-text mb-2">Ready to experience <b>WHEELS</b> on Fire ?<br><b> Prize worth: </b> ₹2000 </p>
+                                   <p class="white-text mb-2">Ready to experience <b>WHEELS</b> on Fire ?<br>
+                                        <b> Prize worth:  ₹2000 </b><br>
+                                        <b><a id = "hoveryellow"  href="static/nfs_rules.pdf">Read More</a></b>
+                                    </p>
                                 </div>
                                 </div>
 
