--- a/index.html
+++ b/index.html
@@ -802,17 +802,6 @@
                                 </div>
                                 <!--/.Second column-->
 
-                                <!--Third column-->
-                                <!-- <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-r">
-                                    <h5 class="font-bold"><strong>Sponsors</strong></h5>
-                                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                                    <p><a href="#!">Mc Donalds</a></p>
-                                    <p><a href="#!">Hangouts</a></p>
-                                    <p><a href="#!">Sakthi's Kitchen</a></p>
-                                </div> -->
-                                <!--/.Third column-->
-
-                                <!--Fourth column-->
                                 <div class="col-md-4 col-lg-3 col-xl-3">
                                     <h5 class="font-bold"><strong>Contact</strong></h5>
                                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
@@ -821,6 +810,19 @@
                                     <p><i class="fa fa-phone mr-3"></i>+91 9298100490</p>
                                     <p><i class="fa fa-phone mr-3"></i>+91 7898233880</p>
                                 </div>
+
+                                <!--Third column-->
+                                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-r">
+                                    <h5 class="font-bold"><strong>Address</strong></h5>
+                                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                                    <p><a href="#!">Old Dhamtari Rd, Datrenga</a></p>
+                                    <p><a href="#!">Govt. Engg. College</a></p>
+                                    <p><a href="#!">Sejbahar</a></p>
+                                </div>
+                                <!--/.Third column-->
+
+                                <!--Fourth column-->
+                                
                                 <!--/.Fourth column-->
 
                             </div>
