Updated registration details

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <!-- Heading -->
                         <h2 class="display-3  white-text mb-2" style="padding-top: 1cm;" id="titlemain"><b>Tech Maitry</b></h2>
                         <h2 class="display-6  white-text mb-2" >...come ally with Technology</h2>
-                        <h4 class="white-text" >11th and 12th November</h4>
+                        <h4 class="white-text" >11th and 12th November 2017</h4>
                         <!-- Divider -->
                         <hr class="hr-light">
 
@@ -626,8 +626,8 @@
                                 <div class="col-md-12 white-text mb-2" style="background-color: #0000003d; min-height: 5cm;">
                                     <p style="padding-top: 0.5cm;"><b>Keep checking this section for updates</b></p>
                                     <ul>
-                                        <li><b>Registration Started</b></li>
-                                        <li><b>Limited seats available</b></li>
+                                        <li><b>Registration Closed</b></li>
+                                        <!-- <li><b>Limited seats available</b></li> -->
                                         
                                         <!-- <li><b>Special Lunch will be arranged for participants <a href="static/Special_dinner.pdf" style="color: black;">Read More</a></b></li> -->
                                     </ul>
